# scene-flow

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SUMMARY.md  environment.yaml  mac_environment.yaml  pyproject.toml  resilient-fluttering-octopus.md  visualize_predictions.py  viz_zeroflow_predictions.py
.github/: copilot-instructions.md
OpenPCDet/: cfgs
OpenPCDet/pcdet/datasets/: __init__.py
OpenPCDet/pcdet/datasets/waymo/: waymo_dataset.py
OpenPCDet/tools/: visualize_gt.py  visualize_gt_gif.py
SceneFlowZoo/: run_zeroflow_waymo.sh
SceneFlowZoo/configs/fast_nsf/argo/: val_cached_debug.py
SceneFlowZoo/configs/fastflow3d/waymo/: zeroflow_local.py
SceneFlowZoo/data_prep_scripts/waymo/: extract_records_local.py
SceneFlowZoo/docker/: Dockerfile_cuda
SceneFlowZoo/models/components/embedders/: dynamic_scatter_wrapper.py  make_voxels.py
scripts/: run_all_methods.sh  run_phase_cd.py  run_pred_box_sweep.py  setup.sh  visualize_aggregation.py  visualize_phase_c_jelly.py
src/rigid_flow/: pipeline.py
src/rigid_flow/aggregation/: rigid_aggregation.py
src/rigid_flow/core/: types.py
src/rigid_flow/data/: pred_boxes.py  waymo_parser.py  zeroflow_loader.py
src/rigid_flow/data/waymo_protos/: __init__.py  dataset_pb2.py  label_pb2.py
src/rigid_flow/data/waymo_protos/protos/: box_pb2.py  breakdown_pb2.py  camera_segmentation_metrics_pb2.py  camera_segmentation_pb2.py  (+24 more)
src/rigid_flow/eval/: metrics.py
src/rigid_flow/geometry/: points_in_boxes.py  se3.py
src/rigid_flow/visualization/: bev.py  flow_comparison.py  per_object.py  visualize.py
