[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scene-flow"
version = "0.1.0"
description = "Object-aware scene flow prediction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy", "pillow", "scipy"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.ruff]
src = ["src"]
line-length = 140
extend-exclude = ["src/rigid_flow/data/waymo_protos/**/*.py"]
lint.select = ["F", "I"]

[tool.black]
line-length = 140
target-version = ['py312']